# lcars-mcp-server

./: .dockerignore  .env.example  README.md  pyproject.toml
.github/workflows/: docker-build-check.yml  docker-build.yml  docker-manual.yml  docker-publish.yml
docker/: Dockerfile
src/lcars_mcp_server/: __main__.py  functions.py  postgres.py  qdrant.py  rerank.py  server.py  settings.py  tools.py
